modify offer search to include sort filter back